--- a/public/index.html
+++ b/public/index.html
@@ -572,7 +572,7 @@
         <div class="col-lg-12 p-0 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li  data-filter=".filter-web">Development</li>
+            <li data-filter=".filter-web">Development</li>
             <!-- <li data-filter=".filter-web">Angular</li>
             <li data-filter=".filter-web">React</li> -->
             <li data-filter=".filter-design">Design</li>
@@ -598,6 +598,20 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
           <div class="portfolio-wrap">
+            <img src="assets/img/freelance/Juggernaut-Racing.png" class="img-fluid" alt="ArcadeMini">
+            <div class="portfolio-info">
+              <h4>Juggernaut Racing</h4>
+              <p>Website</p>
+              <div class="portfolio-links">
+                <a href="freelance-page/juggernaut-racing.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx
+                      bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
+          <div class="portfolio-wrap">
             <img src="assets/img/freelance/Plan8.png" class="img-fluid" alt="ArcadeMini">
             <div class="portfolio-info">
               <h4>Plan8</h4>
@@ -610,6 +624,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/SustLabs-new.png" class="img-fluid" alt="aux">
@@ -866,7 +881,7 @@
             </div>
           </div>
         </div>
-       
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
           <div class="portfolio-wrap">
             <img src="assets/img/freelance/RVM.png" class="img-fluid" alt="ArcadeMini">
