--- a/public/freelance-page/gyde.html
+++ b/public/freelance-page/gyde.html
@@ -35,37 +35,29 @@
         <div class="row">
           <div class="col-lg-8">
             <h2 class="portfolio-title">
-              Umpteens React App
+              GYDE
             </h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="../assets/img/freelance/Umpteens.png" class="img-fluid" alt="Epiko" />
-              <img src="../assets/img/freelance/Umpteens1.png" class="img-fluid" alt="Epiko" />
-              <img src="../assets/img/freelance/Umpteens2.png" class="img-fluid" alt="Epiko" />
+              <img src="../assets/img/freelance/gyde.png" class="img-fluid" alt="gyde" />
+              <img src="../assets/img/freelance/gyde1.png" class="img-fluid" alt="gyde" />
+              <img src="../assets/img/freelance/gyde2.png" class="img-fluid" alt="gyde" />
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Website</li>
+              <li><strong>Category</strong>: Node Express Website</li>
               <li>
                 <strong>Project URL</strong>:
-                <a href="https://umpteens-react-app.web.app" target="_blank">https://umpteens-react-app.web.app</a>
+                <a href="https://gyde.ai/" target="_blank">https://gyde.ai/</a>
               </li>
-              <li>
-                <strong>GitHub URL</strong>:
-                <a href="https://github.com/SuchitraSwain/umpteens"
-                  target="_blank">https://github.com/SuchitraSwain/umpteens</a>
-              </li>
+
             </ul>
 
-            <p>
-             Company product application
-            </p>
 
             <p>
-              <b>USE STACK: </b> React JS, Context API,
-              Material UI, FLEXBOX, Firebase
+              <b>USE STACK: </b> Html, Css, JavaScript, Node Js
             </p>
           </div>
         </div>
