--- a/public/freelance-page/juggernaut-racing.html
+++ b/public/freelance-page/juggernaut-racing.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Suchitra Swain</title>
   <meta content="" name="descriptison" />
   <meta content="" name="keywords" />
   <link href="../assets/img/favicon.webP" rel="icon" />
@@ -50,14 +50,15 @@
               <li><strong>Category</strong>: Website</li>
               <li>
                 <strong>Project URL</strong>:
-                <a href="https://www.plan8tech.com/" target="_blank">https://www.plan8tech.com/</a>
-                <br>
                 <a href="https://www.juggernaut-racing.com/" target="_blank">https://www.juggernaut-racing.com/</a>
+                <br>
+                <a href="https://jr-website-36f71.web.app" target="_blank">https://jr-website-36f71.web.app </a>
+
               </li>
               <li>
                 <strong>GitHub URL</strong>:
-                <a href="https://github.com/SuchitraSwain/Plan8"
-                  target="_blank">https://github.com/SuchitraSwain/Plan8</a>
+                <a href="https://github.com/SuchitraSwain/jr-website"
+                  target="_blank">https://github.com/SuchitraSwain/jr-website</a>
               </li>
             </ul>
 
