--- a/public/index.html
+++ b/public/index.html
@@ -612,6 +612,20 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
           <div class="portfolio-wrap">
+            <img src="assets/img/freelance/gyde.png" class="img-fluid" alt="gyde">
+            <div class="portfolio-info">
+              <h4>GYDE</h4>
+              <p>Node Express website</p>
+              <div class="portfolio-links">
+                <a href="freelance-page/gyde.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx
+                      bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
+          <div class="portfolio-wrap">
             <img src="assets/img/freelance/Plan8.png" class="img-fluid" alt="ArcadeMini">
             <div class="portfolio-info">
               <h4>Plan8</h4>
