connect up webiste

--- a/public/index.html
+++ b/public/index.html
@@ -653,6 +653,20 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
+          <div class="portfolio-wrap">
+            <img src="assets/img/freelance/ConnectUp.png" class="img-fluid" alt="ConnectUp">
+            <div class="portfolio-info">
+              <h4>ConnectUp Website</h4>
+              <p>Website</p>
+              <div class="portfolio-links">
+                <a href="freelance-page/connect-up.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx
+                      bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/SustLabs.png" class="img-fluid" alt="SustLab">
