freelace project added

--- a/public/freelance-page/budja.html
+++ b/public/freelance-page/budja.html
@@ -6,7 +6,7 @@
     <title>Suchitra Swain</title>
     <meta content="" name="descriptison" />
     <meta content="" name="keywords" />
-    <link href="../assets/img/favicon.png" rel="icon" />
+    <link href="../assets/img/favicon.webP" rel="icon" />
     <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
@@ -43,19 +43,22 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">
-                NETFLIX CLONE
-              </h2>
+              <h2 class="portfolio-title">Epiko Regal Website</h2>
               <div class="owl-carousel portfolio-details-carousel">
                 <img
-                  src="../assets/img/portfolio/netflix.png"
+                  src="../assets/img/portfolio/Budja.png"
                   class="img-fluid"
-                  alt="netflix"
+                  alt="Budja"
                 />
                 <img
-                  src="../assets/img/portfolio/netflix1.png"
+                  src="../assets/img/portfolio/Budja1.png"
                   class="img-fluid"
-                  alt="netflix1"
+                  alt="Budja"
+                />
+                <img
+                  src="../assets/img/portfolio/Budja2.png"
+                  class="img-fluid"
+                  alt="Budja"
                 />
               </div>
             </div>
@@ -63,30 +66,22 @@
             <div class="col-lg-4 portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: React Application</li>
+                <li><strong>Category</strong>: NextJs Application</li>
                 <li>
-                  <strong>Project URL</strong>:<a
-                    href="https://netflix-clone-5966a.web.app/"
-                    target="_blank"
-                    >https://netflix-clone-5966a.web.app/</a
-                  >
-                </li>
-                <li>
-                  <strong>GitHub URL</strong>:
-                  <a
-                    href="https://github.com/SuchitraSwain/netflix-clone-react.git"
-                    target="_blank"
-                    >https://github.com/SuchitraSwain/netflix-clone-react.git</a
+                  <strong>Project URL</strong>:
+                  <a href="https://www.budja.io/" target="_blank"
+                    >https://www.budja.io/</a
                   >
                 </li>
               </ul>
 
               <p>
-                Netflix clone focusing on react js concept and material UI.
-                Responsive design.
+                Welcome to the most exclusive fractionalized NFT drops on
+                Cardano.
               </p>
+              <p>Collect, own and enjoy a piece of art</p>
 
-              <p><b>USE STACK: </b> React JS, Material UI, FLEXBOX, Firebase</p>
+              <p><b>USE STACK: </b> Nextjs, TailwindCss, ContextAPI, Redux</p>
             </div>
           </div>
         </div>
