--- a/public/index.html
+++ b/public/index.html
@@ -575,13 +575,26 @@
             <li data-filter=".filter-web">Development</li>
             <!-- <li data-filter=".filter-web">Angular</li>
             <li data-filter=".filter-web">React</li> -->
-            <li data-filter=".filter-design">Design</li>
             <li data-filter=".filter-freelance">Freelance</li>
           </ul>
         </div>
       </div>
 
       <div class="row portfolio-container">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Budja.png" class="img-fluid" alt="ArcadeMini">
+            <div class="portfolio-info">
+              <h4>Budja NFT</h4>
+              <p>NextJS</p>
+              <div class="portfolio-links">
+                <a href="freelance-page/budja.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx
+                      bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
           <div class="portfolio-wrap">
             <img src="assets/img/freelance/epiko.png" class="img-fluid" alt="ArcadeMini">
@@ -766,37 +779,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/google.png" class="img-fluid" alt="google">
-            <div class="portfolio-info">
-              <h4>GOOGLE CLONE</h4>
-              <p>React App</p>
-              <div class="portfolio-links">
-                <!-- <a href="assets/img/portfolio/google.png" data-gall="portfolioGallery" class="venobox"
-                  title="GOOGLE CLONE"><i class="bx bx-plus"></i></a> -->
-                <a href="portfolio-page/google-clone.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx
-                      bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/netflix.png" class="img-fluid" alt="netflix">
-            <div class="portfolio-info">
-              <h4>NETFLIX CLONE</h4>
-              <p>React App</p>
-              <div class="portfolio-links">
-                <a href="portfolio-page/netflix.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx
-                      bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
+     
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/covid.png" class="img-fluid" alt="covid">
@@ -833,76 +816,6 @@
               <p>React App</p>
               <div class="portfolio-links">
                 <a href="portfolio-page/amazon-clone.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx
-                      bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-          <div class="portfolio-wrap">
-            <img src="assets/img/design/adisha1.png" class="img-fluid" alt="ArcadeMini">
-            <div class="portfolio-info">
-              <h4>SIGN LANGUAGE</h4>
-              <p>Mobile App design</p>
-              <div class="portfolio-links">
-                <a href="design-page/sign-language.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx
-                      bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-          <div class="portfolio-wrap">
-            <img src="assets/img/design/ArcadeMini.png" class="img-fluid" alt="ArcadeMini">
-            <div class="portfolio-info">
-              <h4>ARCADE MINI MODEL</h4>
-              <p>Blender 3d Model</p>
-              <div class="portfolio-links">
-                <a href="design-page/arcade-mini.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx
-                      bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-          <div class="portfolio-wrap">
-            <img src="assets/img/design/huntedhouse.png" class="img-fluid" alt="ArcadeMini">
-            <div class="portfolio-info">
-              <h4>Haunted House</h4>
-              <p>Blender 3d Model</p>
-              <div class="portfolio-links">
-                <a href="design-page/haunted.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx
-                      bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-          <div class="portfolio-wrap">
-            <img src="assets/img/design/table.png" class="img-fluid" alt="ArcadeMini">
-            <div class="portfolio-info">
-              <h4>Sci-fi Table</h4>
-              <p>Blender 3d Model</p>
-              <div class="portfolio-links">
-                <a href="design-page/sc-fi-table.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx
-                      bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-          <div class="portfolio-wrap">
-            <img src="assets/img/design/MrPotato.jpg" class="img-fluid" alt="ArcadeMini">
-            <div class="portfolio-info">
-              <h4>Mr.Potato</h4>
-              <p>Blender 3d Model</p>
-              <div class="portfolio-links">
-                <a href="design-page/potato.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Portfolio Details"><i class="bx
                       bx-link"></i></a>
               </div>
@@ -1013,7 +926,31 @@
           </div>
         </div>
 
-        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+        <div class="col-md-6 mt-md-0 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bxl-github"></i>
+            <h3>GitHub</h3>
+            <p><a href="https://github.com/SuchitraSwain" target="_blank">https://github.com/SuchitraSwain</a></p>
+          </div>
+        </div>
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bxl-linkedin"></i>
+            <h3>LinkedIn</h3>
+            <p><a href="https://www.linkedin.com/in/suchitra-swain-47562ab7/"
+                target="_blank">https://www.linkedin.com/in/suchitra-swain-47562ab7/</a></p>
+          </div>
+        </div>
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bxl-behance"></i>
+            <h3>Behance</h3>
+            <p><a href="https://www.behance.net/suchitraswain"
+                target="_blank">https://www.behance.net/suchitraswain</a></p>
+          </div>
+        </div>
+
+        <!-- <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
             <h3>Profiles</h3>
@@ -1026,7 +963,7 @@
                   class="icofont-behance"></i></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
