new project hornnies

--- a/public/freelance-page/hornnies.html
+++ b/public/freelance-page/hornnies.html
@@ -43,22 +43,22 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">Budja Nextjs Application</h2>
+              <h2 class="portfolio-title">Hornnies ReactJs Application</h2>
               <div class="owl-carousel portfolio-details-carousel">
                 <img
-                  src="../assets/img/portfolio/Budja.png"
+                  src="../assets/img/freelance/Hornnies1.png"
                   class="img-fluid"
-                  alt="Budja"
+                  alt="Hornnies"
                 />
                 <img
-                  src="../assets/img/portfolio/Budja1.png"
+                  src="../assets/img/freelance/Hornnies3.png"
                   class="img-fluid"
-                  alt="Budja"
+                  alt="Hornnies"
                 />
                 <img
-                  src="../assets/img/portfolio/Budja2.png"
+                  src="../assets/img/freelance/Hornnies4.png"
                   class="img-fluid"
-                  alt="Budja"
+                  alt="Hornnies"
                 />
               </div>
             </div>
@@ -66,20 +66,25 @@
             <div class="col-lg-4 portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: NextJs Application</li>
+                <li><strong>Category</strong>: ReactJs Application</li>
                 <li>
                   <strong>Project URL</strong>:
-                  <a href="https://www.budja.io/" target="_blank"
-                    >https://www.budja.io/</a
+                  <a href="hornnies-marketplace.vercel.app" target="_blank"
+                    >hornnies-marketplace.vercel.app</a
+                  >
+                  <a
+                    href="https://www.awesomescreenshot.com/video/9652485?key=f88d718fd3fec8621b9b650657cf594b"
+                    target="_blank"
+                    >https://www.awesomescreenshot.com/video/9652485?key=f88d718fd3fec8621b9b650657cf594b</a
                   >
                 </li>
               </ul>
 
               <p>
-                Welcome to the most exclusive fractionalized NFT drops on
-                Cardano.
+                Hornnies are a collection of unique pixelated bull designs that
+                come in all shapes and sizes, featuring their own strengths and
+                hand drawn accessories, launching on the CARDANO BLOCKCHAIN.
               </p>
-              <p>Collect, own and enjoy a piece of art</p>
 
               <p><b>USE STACK: </b> Nextjs, TailwindCss, ContextAPI, Redux</p>
             </div>
