--- a/public/index.html
+++ b/public/index.html
@@ -596,6 +596,20 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
+          <div class="portfolio-wrap" style="height: 175px;">
+            <img src="assets/img/freelance/Hornnies.png" class="img-fluid" alt="ArcadeMini">
+            <div class="portfolio-info">
+              <h4>Hornnies NFT</h4>
+              <p>ReactJS</p>
+              <div class="portfolio-links">
+                <a href="freelance-page/hornnies.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx
+                      bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-freelance">
           <div class="portfolio-wrap">
             <img src="assets/img/freelance/epiko.png" class="img-fluid" alt="ArcadeMini">
             <div class="portfolio-info">
