fitness and restaurant

--- a/public/portfolio-page/fitness.html
+++ b/public/portfolio-page/fitness.html
@@ -6,7 +6,7 @@
     <title>Suchitra Swain</title>
     <meta content="" name="descriptison" />
     <meta content="" name="keywords" />
-    <link href="../assets/img/favicon.png" rel="icon" />
+    <link href="../assets/img/favicon.webP" rel="icon" />
     <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
@@ -43,41 +43,56 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">
-                CLIENT PANEL
-              </h2>
+              <h2 class="portfolio-title">React Fitness Application</h2>
               <div class="owl-carousel portfolio-details-carousel">
                 <img
-                  src="../assets/img/portfolio/Client.png"
+                  src="../assets/img/portfolio/Fitness2.png"
                   class="img-fluid"
-                  alt="Client"
+                  alt="Fitness"
                 />
                 <img
-                  src="../assets/img/portfolio/Client1.png"
+                  src="../assets/img/portfolio/Fitness3.png"
                   class="img-fluid"
-                  alt="Client1"
+                  alt="Fitness"
                 />
                 <img
-                src="../assets/img/portfolio/Client2.png"
-                class="img-fluid"
-                alt="Client2"
-              />
+                  src="../assets/img/portfolio/Fitness4.png"
+                  class="img-fluid"
+                  alt="Fitness"
+                />
               </div>
             </div>
 
             <div class="col-lg-4 portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Angular Development</li>
+                <li><strong>Category</strong>: React website</li>
                 <li>
                   <strong>Project URL</strong>:
-                  <a href="https://client-panal-angular.firebaseapp.com/login" target="_blank"
-                    >https://client-panal-angular.firebaseapp.com/login</a
+                  <a
+                    href="https://fitness-react-app.vercel.app/"
+                    target="_blank"
+                    >https://fitness-react-app.vercel.app/</a
+                  >
+                </li>
+                <li>
+                  <strong>GitHub URL</strong>:
+                  <a
+                    href="https://github.com/SuchitraSwain/fitness-react-app"
+                    target="_blank"
+                    >https://github.com/SuchitraSwain/fitness-react-app</a
                   >
                 </li>
               </ul>
 
-              <p><b>USE STACK: </b> Angular8, Firebase</p>
+              <p>
+                Fitness exercise react application with Rapid APIs. Fully mobile
+                friendly
+              </p>
+
+              <p>
+                <b>USE STACK: </b> React JS, Context API, Material UI, FLEXBOX
+              </p>
             </div>
           </div>
         </div>
