--- a/public/portfolio-page/restaurant.html
+++ b/public/portfolio-page/restaurant.html
@@ -6,7 +6,7 @@
     <title>Suchitra Swain</title>
     <meta content="" name="descriptison" />
     <meta content="" name="keywords" />
-    <link href="../assets/img/favicon.png" rel="icon" />
+    <link href="../assets/img/favicon.webP" rel="icon" />
     <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
@@ -43,19 +43,22 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
-              <h2 class="portfolio-title">
-                COVID-19 TRACKER
-              </h2>
+              <h2 class="portfolio-title">React Restautant landing page</h2>
               <div class="owl-carousel portfolio-details-carousel">
                 <img
-                  src="../assets/img/portfolio/covid.png"
+                  src="../assets/img/portfolio/Restaurant1.png"
                   class="img-fluid"
-                  alt="covid"
+                  alt="Restaurant"
                 />
                 <img
-                  src="../assets/img/portfolio/covid1.png"
+                  src="../assets/img/portfolio/Restaurant2.png"
                   class="img-fluid"
-                  alt="covid1"
+                  alt="Restaurant"
+                />
+                <img
+                  src="../assets/img/portfolio/Restaurant3.png"
+                  class="img-fluid"
+                  alt="Restaurant"
                 />
               </div>
             </div>
@@ -63,30 +66,34 @@
             <div class="col-lg-4 portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: React Application</li>
+                <li><strong>Category</strong>: React website</li>
                 <li>
-                  <strong>Project URL</strong>:<a
-                    href="https://suchitra-covid19-tracker.firebaseapp.com/"
+                  <strong>Project URL</strong>:
+                  <a
+                    href="https://restaurant-react-website.vercel.app/"
                     target="_blank"
-                    >https://suchitra-covid19-tracker.firebaseapp.com/</a
+                    >https://restaurant-react-website.vercel.app/</a
                   >
                 </li>
                 <li>
                   <strong>GitHub URL</strong>:
                   <a
-                    href="https://github.com/SuchitraSwain/COVID-19-Tracker-REACT.git"
+                    href="https://github.com/SuchitraSwain/restaurant-react-website"
                     target="_blank"
-                    >https://github.com/SuchitraSwain/COVID-19-Tracker-REACT.git</a
+                    >https://github.com/SuchitraSwain/restaurant-react-website</a
                   >
                 </li>
               </ul>
 
               <p>
-                COVID-19 Tracker app use the disease.sh Docs - An open API for
-                disease-related statistics, for the updated data.
+                Fully Responsive Restaurant Website with Modern UI and UX in
+                ReactJS
               </p>
 
-              <p><b>USE STACK: </b> React JS, Material UI, FLEXBOX, Firebase</p>
+              <p>
+                <b>USE STACK: </b> React JS, Context API, Google Search API
+                Material UI, FLEXBOX, Firebase
+              </p>
             </div>
           </div>
         </div>
