hornnies app url updated

--- a/public/freelance-page/hornnies.html
+++ b/public/freelance-page/hornnies.html
@@ -69,8 +69,8 @@
                 <li><strong>Category</strong>: ReactJs Application</li>
                 <li>
                   <strong>Project URL</strong>:
-                  <a href="hornnies-marketplace.vercel.app" target="_blank"
-                    >hornnies-marketplace.vercel.app</a
+                  <a href="https://hornnies-marketplace.vercel.app/" target="_blank"
+                    >https://hornnies-marketplace.vercel.app/</a
                   >
                   <a
                     href="https://www.awesomescreenshot.com/video/9652485?key=f88d718fd3fec8621b9b650657cf594b"
