--- a/public/index.html
+++ b/public/index.html
@@ -255,8 +255,8 @@
                 polished deliverable.</em></p>
             <p>
             <ul>
-              <li>Mumbai, India</li>
-              <li>+91-8094812614</li>
+              <li>Berlin, Germany</li>
+              <li>+49-17687121933</li>
               <li>suchitraswain.2012@gmail.com</li>
             </ul>
             </p>
